--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -13,7 +13,7 @@
         </iframe>
         <audio src="/video y audio/relaxing-audio-for-yoga-131673.mp3"
          autoplay controls></audio>
-        <video src="/video y audio/vecteezy_morning-sunrise-reflections-natural-lagoon-krabi-thailand_2375835.mp4" 
+        <video src="/video y audio/video.mp4" 
         width="600" height="600" muted autoplay controls loop>
         </video>
         <object data="/video y audio/9016.pdf" type="application/pdf"  width="300" height="500"> </object>
