--- a/Codigo/multimedia/multimedia.html
+++ b/Codigo/multimedia/multimedia.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Codigo/multimedia/style.css">
     </head>
 
-    <body class="Contenedor2">
-        <h2>By Nahia</h2>
-        <nav class="Contenedor1">
-            <ul>
-                <li class="menu"><a href="iframe.html">Iframe</a></li>
-                <li class="menu"><a href="audio.html">Audio</a></li>
-                <li class="menu"><a href="video.html">Video</a></li>
-                <li class="menu"><a href="object-embed.html">Object-Embed</a></li>
-                <li class="menu"><a href="canvas.html">Canvas</a></li>
-            </ul>
+    <body>
+        <section>
+            <nav class="Contenedor1">
+                <ul>
+                    <li class="menu"><a href="/Codigo/multimedia/iframe.html">Iframe</a></li>
+                    <li class="menu"><a href="/Codigo/multimedia/audio.html">Audio</a></li>
+                    <li class="menu"><a href="/Codigo/multimedia/video.html">Video</a></li>
+                    <li class="menu"><a href="/Codigo/multimedia/object-embed.html">Object-Embed</a></li>
+                  <li class="menu"><a href="/Codigo/multimedia/canvas.html">Canvas</a></li>
+               </ul>
+            </nav>
+            </section>
     </body>
 </html>
