--- a/Codigo/position/fixed.html
+++ b/Codigo/position/fixed.html
@@ -174,7 +174,7 @@
          
     </section>
 
-    <a href="../position.html">« Volver a Position</a>
+    <a href="position.html">« Volver a Position</a>
 
 
 </body>
