--- a/Codigo/position/sticky.html
+++ b/Codigo/position/sticky.html
@@ -169,7 +169,7 @@
          
     </section>
 
-    <a href="../position.html">« Volver a Position</a>
+    <a href="position.html">« Volver a Position</a>
 
 
 </body>
