--- a/Codigo/position/z-index.html
+++ b/Codigo/position/z-index.html
@@ -176,7 +176,7 @@
          
     </section>
 
-    <a href="../position.html">« Volver a Position</a>
+    <a href="position.html">« Volver a Position</a>
 
 
 </body>
